[metadata]
name=plato_wp36
version=0.2.0
author=Dominic Ford
author_email=dcf21@ast.cam.ac.uk
description=Helper functions for the PLATO WP36 EAS pipeline
long_description=Helper functions for the PLATO WP36 EAS pipeline
url=https://sci.esa.int/web/plato
license=MIT
classifiers=
        Development Status :: 3 - Alpha
        Intended Audience :: Science/Research
        License :: OSI Approved :: MIT License
        Operating System :: OS Independent
        Programming Language :: Python :: 3.8
        Topic :: Scientific/Engineering :: Astronomy
        Topic :: Scientific/Engineering :: Physics

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src
